# nonemail

./: README.md  pyproject.toml
nonebot/drivers/email/: driver.py
nonebot/drivers/email/model/: ability.py  aioimap4.py  aiosmtp.py  imap4.py  mailing.py
nonemail/: __init__.py  client.py  driver.py
nonemail/procotol/: ability.py  aioimap4.py  aiosmtp.py
tests/: test_client.py  test_load.py  test_protocol.py
