[tool.poetry]
name = "nonebot-driver-email"
version = "0.1.0"
description = "基于 aiosmtplib 和 aioimaplib 的 Nonebot 邮件驱动"
authors = ["AzideCupric <rukuy@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AzideCupric/nonebot-driver-email/README.md"
repository = "https://github.com/AzideCupric/nonebot-driver-email"
documentation = "https://github.com/AzideCupric/nonebot-driver-email/docs"
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.1"
aiosmtplib = "^2.0.2"
aioimaplib = "^1.0.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.275"
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.black]
preview = true
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901"]

line-length = 88
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
